--- a/LanDotBien_BackEnd/appsettings.json
+++ b/LanDotBien_BackEnd/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyDB": "server=localhost;database=lanvar;User=root;Password=12345;"
+  }
 }
