--- a/LanVar.Service/LanVar.Service.csproj
+++ b/LanVar.Service/LanVar.Service.csproj
@@ -13,8 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AutoMapperProfile\" />
-    <Folder Include="DTO\" />
-    <Folder Include="Service\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
@@ -27,5 +25,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LanVar.Core\LanVar.Core.csproj" />
+    <ProjectReference Include="..\Tools\Tools.csproj" />
   </ItemGroup>
 </Project>
