--- a/LanVar.Service/LanVar.Service.csproj
+++ b/LanVar.Service/LanVar.Service.csproj
@@ -15,6 +15,7 @@
     <Folder Include="AutoMapperProfile\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CoreApiResponse" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
