--- a/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
+++ b/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
@@ -15,4 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LanVar.Core\LanVar.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+  </ItemGroup>
 </Project>
