--- a/LanDotBien_BackEnd/appsettings.json
+++ b/LanDotBien_BackEnd/appsettings.json
@@ -10,7 +10,7 @@
     "MyDB": "server=localhost;database=lanvar;User=root;Password=12345;"
   },
   "Jwt": {
-    "Issure": "SWD391@Auction",
+    "Issuer": "SWD391@Auction",
     "Audience": "SWD391@Auction",
     "Key": "Kt5lOVWi9tAwQbRFAVj1XZ3ZbAiuyukuiytkih6PsBvd"
   }
