--- a/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
+++ b/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
@@ -16,6 +16,8 @@
     <ProjectReference Include="..\LanVar.Core\LanVar.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.3" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.4.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
 </Project>
