--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\LanVar.Core\LanVar.Core.csproj" />
+    </ItemGroup>
+
 </Project>
