--- a/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
+++ b/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\LanVar.Service\LanVar.Service.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.3" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.4.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
