--- a/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
+++ b/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LanVar.Core\LanVar.Core.csproj" />
+    <ProjectReference Include="..\LanVar.DTO\LanVar.DTO.csproj" />
     <ProjectReference Include="..\LanVar.Service\LanVar.Service.csproj" />
   </ItemGroup>
   <ItemGroup>
