--- a/LanVar.Core/LanVar.Core.csproj
+++ b/LanVar.Core/LanVar.Core.csproj
@@ -36,4 +36,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
 </Project>
