--- a/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
+++ b/LanVar.Insfrastructure/LanVar.Insfrastructure.csproj
@@ -12,7 +12,9 @@
   <ItemGroup>
     <ProjectReference Include="..\LanVar.Core\LanVar.Core.csproj" />
     <ProjectReference Include="..\LanVar.DTO\LanVar.DTO.csproj" />
-    <ProjectReference Include="..\LanVar.Service\LanVar.Service.csproj" />
+    <ProjectReference Include="..\LanVar.Services\LanVar.Services.csproj" />
+ 
+    <ProjectReference Include="..\Tools\Tools.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
