code crud room register

--- a/LanVar.Core/appsettings.json
+++ b/LanVar.Core/appsettings.json
@@ -1,5 +1,15 @@
 {
   "ConnectionStrings": {
     "MyDB": "server=localhost;database=lanvar;User=root;Password=12345;"
+  },
+  "VnPay": {
+    "TmnCode": "4ZMKUCAA",
+    "HashSecret": "DSQRKWVYVOSXXSEYGXDWMHXADZUSKWDS",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Version": "2.1.0",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "https://localhost:7022/swagger/index.html"
   }
 }
