--- a/LanDotBien_BackEnd/appsettings.json
+++ b/LanDotBien_BackEnd/appsettings.json
@@ -14,5 +14,15 @@
     "Issuer": "SWD391@Auction",
     "Audience": "SWD391@Auction",
     "Key": "Kt5lOVWi9tAwQbRFAVj1XZ3ZbAiuyukuiytkih6PsBvd"
+  },
+  "VnPay": {
+    "TmnCode": "5KB5SZN9",
+    "HashSecret": "DANFUDDWJFTGUTXLSTKHVSBNWNEIDHJB",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn",
+    "PaymentBackReturnUrl": "http://localhost:5112/api/Bill/Payment-CallBack"
   }
 }
