--- a/LanDotBien_BackEnd/appsettings.json
+++ b/LanDotBien_BackEnd/appsettings.json
@@ -23,6 +23,7 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "http://localhost:5112/api/Bill/Payment-CallBack"
+    "PaymentBackReturnUrl": "http://localhost:5112/api/Bill/Payment-CallBack",
+    "PaymentUserBackReturnUrl": "http://localhost:5112/api/ProductOwner/Payment-CallBack"
   }
 }
