--- a/LanVar.DTO/LanVar.DTO.csproj
+++ b/LanVar.DTO/LanVar.DTO.csproj
@@ -13,6 +13,9 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="Microsoft.AspNet.SignalR.Client" Version="2.4.3" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="8.0.3" />
     </ItemGroup>
 
 </Project>
