--- a/LanDotBien_BackEnd/appsettings.json
+++ b/LanDotBien_BackEnd/appsettings.json
@@ -24,6 +24,7 @@
     "Version": "2.1.0",
     "Locale": "vn",
     "PaymentBackReturnUrl": "http://localhost:5112/api/Bill/Payment-CallBack",
-    "PaymentUserBackReturnUrl": "http://localhost:5112/api/ProductOwner/Payment-CallBack"
+    "PaymentUserBackReturnUrl": "http://localhost:5112/api/ProductOwner/Payment-CallBack",
+    "PaymentDepositBackReturnUrl": "http://localhost:5112/api/RoomRegistrations/Payment-CallBack"
   }
 }
